--- a/NOMAD/Base.lproj/Main.storyboard
+++ b/NOMAD/Base.lproj/Main.storyboard
@@ -114,30 +114,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="pwe-sv-Jax">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="pwe-sv-Jax">
                                 <rect key="frame" x="0.0" y="114" width="320" height="389"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="320" id="KIU-IW-qGy"/>
                                 </constraints>
+                                <color key="separatorColor" red="0.61778714359999998" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ORDERDETAILSTEXTCELLIDENTIFIER" rowHeight="50" id="zZn-cF-Usn" customClass="OrderDetailsTextTableViewCell">
                                         <rect key="frame" x="0.0" y="22" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zZn-cF-Usn" id="4Lf-U5-zfg">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="CellOutline.png" translatesAutoresizingMaskIntoConstraints="NO" id="XIk-XM-X6V">
-                                                    <rect key="frame" x="14" y="0.0" width="290" height="49"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="CellOutlineBottom.png" translatesAutoresizingMaskIntoConstraints="NO" id="x0Z-tN-Qo5">
-                                                    <rect key="frame" x="14" y="49" width="290" height="1"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Vh-3C-qJg">
-                                                    <rect key="frame" x="23" y="1" width="48" height="48"/>
+                                                    <rect key="frame" x="20" y="8" width="32" height="32"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 </imageView>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Placeholder" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bkw-WK-f6P">
@@ -149,20 +142,19 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="_cellOutlineBottom" destination="x0Z-tN-Qo5" id="2yU-Ey-z7f"/>
                                             <outlet property="_iconImageView" destination="4Vh-3C-qJg" id="9je-B5-GST"/>
                                             <outlet property="_textField" destination="bkw-WK-f6P" id="dIK-mY-v06"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ORDERDETAILSDELIVERYCELLIDENTIFIER" rowHeight="50" id="N8i-5v-cca">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ORDERDETAILSDELIVERYCELLIDENTIFIER" rowHeight="50" id="N8i-5v-cca" customClass="OrderDetailsDeliveryTableViewCell">
                                         <rect key="frame" x="0.0" y="72" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="N8i-5v-cca" id="7lS-HQ-EoK">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="DeliveryIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="Tdt-rN-nHw">
-                                                    <rect key="frame" x="22" y="1" width="48" height="48"/>
+                                                    <rect key="frame" x="20" y="9" width="32" height="32"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Delivery from 6-7PM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x1k-UI-bv0">
@@ -177,6 +169,27 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="_deliverySlotLabel" destination="x1k-UI-bv0" id="qWi-dZ-Kbb"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ORDERDETAILSDELIVERYPICKERCELLIDENTIFIER" rowHeight="162" id="wfK-IT-vJ8">
+                                        <rect key="frame" x="0.0" y="122" width="320" height="162"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wfK-IT-vJ8" id="uuc-sF-C0q">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p8W-vP-11i">
+                                                    <rect key="frame" x="-80" y="-1" width="480" height="162"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                </pickerView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="centerX" secondItem="p8W-vP-11i" secondAttribute="centerX" id="7gt-pl-7Ay"/>
+                                                <constraint firstAttribute="centerY" secondItem="p8W-vP-11i" secondAttribute="centerY" id="Ppv-uc-eVR"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -236,9 +249,14 @@
                                 <rect key="frame" x="93" y="-10" width="134" height="134"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <pickerView hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3rO-tN-rre">
+                                <rect key="frame" x="-80" y="406" width="480" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="3rO-tN-rre" secondAttribute="bottom" id="3kf-nq-5zh"/>
                             <constraint firstItem="bqO-eg-sqt" firstAttribute="top" secondItem="vg3-kf-A4S" secondAttribute="bottom" id="737-b3-gFP"/>
                             <constraint firstAttribute="trailing" secondItem="vg3-kf-A4S" secondAttribute="trailing" id="8Av-at-rGy"/>
                             <constraint firstItem="mpk-qM-j2l" firstAttribute="centerX" secondItem="lRT-YQ-0lw" secondAttribute="centerX" id="D29-Mz-N19"/>
@@ -250,12 +268,15 @@
                             <constraint firstAttribute="trailing" secondItem="lRT-YQ-0lw" secondAttribute="trailing" id="Sxg-ho-avB"/>
                             <constraint firstItem="lRT-YQ-0lw" firstAttribute="leading" secondItem="PRA-Wb-Pvq" secondAttribute="leading" id="W4t-qg-evT"/>
                             <constraint firstItem="vg3-kf-A4S" firstAttribute="leading" secondItem="PRA-Wb-Pvq" secondAttribute="leading" id="fdP-aW-KEX"/>
+                            <constraint firstAttribute="centerX" secondItem="3rO-tN-rre" secondAttribute="centerX" id="u2F-T4-HfX"/>
                             <constraint firstItem="lRT-YQ-0lw" firstAttribute="top" secondItem="PRA-Wb-Pvq" secondAttribute="top" id="wUJ-tP-2R4"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="s2q-Mk-jCS"/>
                     <connections>
                         <outlet property="_buttonToBottomConstraint" destination="737-b3-gFP" id="sN2-AC-qlW"/>
+                        <outlet property="_deliveryPicker" destination="3rO-tN-rre" id="b9R-Cr-etG"/>
+                        <outlet property="_tableView" destination="pwe-sv-Jax" id="q5B-a8-Dfd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2gi-Ld-9IZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -350,8 +371,6 @@
     </scenes>
     <resources>
         <image name="CartIcon.png" width="55" height="52"/>
-        <image name="CellOutline.png" width="280" height="49"/>
-        <image name="CellOutlineBottom.png" width="280" height="1"/>
         <image name="DeliveryIcon.png" width="48" height="48"/>
         <image name="DownArrowIcon.png" width="63" height="30"/>
         <image name="ExitIcon.png" width="50" height="50"/>
